# 42_CPP_Module00_to_09

./: .gitignore  README.md
Module00/: Makefile  README.md
Module00/tests/: CMakeLists.txt  TestModule00Ex00.cpp  TestModule00Ex01.cpp  TestModule00Ex02.cpp
Module01/: Makefile  README.md
Module01/tests/: CMakeLists.txt  TestModule01Ex00.cpp  TestModule01Ex01.cpp  TestModule01Ex03.cpp  TestModule01Ex05.cpp
Module02/: Makefile  README.md
Module02/tests/: CMakeLists.txt  TestModule02Ex00.cpp  TestModule02Ex01.cpp  TestModule02Ex02.cpp
Module03/: Makefile  README.md
Module03/tests/: CMakeLists.txt  TestModule03Ex00.cpp  TestModule03Ex01.cpp  TestModule03Ex02.cpp
Module04/: Makefile  README.md
Module04/tests/: CMakeLists.txt  TestModule04Ex00.cpp  TestModule04Ex01.cpp  TestModule04Ex02.cpp
Module05/: Makefile  README.md
Module05/ex02/: CMakeLists.txt  Makefile
Module05/ex03/: CMakeLists.txt
Module05/tests/: CMakeLists.txt  Makefile  TestModule05Ex02.cpp  TestModule05Ex03.cpp
Module05/tests/ex00/: CMakeLists.txt  Makefile
Module05/tests/ex00/headers/: Bureaucrat.hpp
Module05/tests/ex00/src/: Bureaucrat.cpp  main.cpp
Module05/tests/ex01/: CMakeLists.txt  Makefile
Module05/tests/ex01/headers/: Bureaucrat.hpp  Form.hpp
Module05/tests/ex01/src/: Bureaucrat.cpp  Form.cpp  main.cpp
Module05/tests/ex02/: Makefile
Module05/tests/ex02/headers/: AForm.hpp  Bureaucrat.hpp  PresidentialPardonForm.hpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.hpp
Module05/tests/ex02/src/: AForm.cpp  Bureaucrat.cpp  PresidentialPardonForm.cpp  RobotomyRequestForm.cpp  ShrubberyCreationForm.cpp  main.cpp
Module05/tests/ex03/: Flowers In My Garden_shrubbery  Makefile
Module05/tests/ex03/headers/: AForm.hpp  Intern.hpp  PresidentialPardonForm.hpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.hpp
Module05/tests/ex03/src/: AForm.cpp  Bureaucrat.cpp  Intern.cpp  PresidentialPardonForm.cpp  RobotomyRequestForm.cpp  ShrubberyCreationForm.cpp  main.cpp
Module06/: CMakeLists.txt  Makefile  README.md
Module06/ex00/: CMakeLists.txt  Makefile
Module06/ex00/headers/: ScalarConverter.hpp
Module06/ex00/src/: ScalarConverter.cpp  main.cpp
Module06/ex01/: CMakeLists.txt  Makefile
Module06/ex01/headers/: Data.hpp  Serializer.hpp
Module06/ex01/src/: Data.cpp  Serializer.cpp  main.cpp
Module06/ex02/: CMakeLists.txt  Makefile
Module06/ex02/headers/: A.hpp  B.hpp  Base.hpp  C.hpp
Module06/ex02/src/: Base.cpp  main.cpp
Module06/tests/: CMakeLists.txt  README.md  TestModule06Ex00.cpp  TestModule06Ex01.cpp  TestModule06Ex02.cpp
Module07/: CMakeLists.txt  Makefile  README.md
Module07/ex00/: CMakeLists.txt  Makefile
Module07/ex00/headers/: Whatever.hpp
Module07/ex00/src/: Whatever.cpp  main.cpp
Module07/ex01/: CMakeLists.txt  Makefile
Module07/ex01/headers/: Colors.hpp  Iter.hpp
Module07/ex01/src/: Iter.cpp  main.cpp
Module07/ex02/: CMakeLists.txt  Makefile
Module07/ex02/headers/: Array.hpp  Array.tpp
Module07/ex02/src/: Array.cpp  main.cpp
Module07/tests/: CMakeLists.txt  TestModule07Ex00.cpp  TestModule07Ex01.cpp  TestModule07Ex02.cpp
Module08/: CMakeLists.txt  Makefile  README.md
Module08/ex00/: CMakeLists.txt  Makefile
Module08/ex00/headers/: Easyfind.hpp  Easyfind.tpp
Module08/ex00/src/: main.cpp
Module08/ex01/: CMakeLists.txt  Makefile
Module08/ex01/headers/: Span.hpp
Module08/ex01/src/: Span.cpp  main.cpp
Module08/ex02/: CMakeLists.txt  Makefile
Module08/ex02/headers/: MutantStack.hpp  MutantStack.tpp
Module08/ex02/src/: main.cpp
Module08/tests/: CMakeLists.txt  TestModule08Ex00.cpp  TestModule08Ex01.cpp  TestModule08Ex02.cpp
Module09/: CMakeLists.txt  Makefile  README.md
Module09/ex00/: CMakeLists.txt  Makefile
Module09/ex00/data/: input.txt
Module09/ex00/headers/: BitcoinExchange.hpp  utils.hpp
Module09/ex00/src/: BitcoinExchange.cpp  main.cpp  utils.cpp
Module09/ex01/: CMakeLists.txt  Makefile
Module09/ex01/data/: input.txt
Module09/ex01/headers/: RPN.hpp  utils.hpp
Module09/ex01/src/: RPN.cpp  main.cpp  utils.cpp
Module09/ex02/: CMakeLists.txt  Makefile
Module09/ex02/data/: input.txt
Module09/ex02/headers/: PmergeMe.hpp  PmergeMe.tpp
Module09/ex02/src/: main.cpp
Module09/tests/: CMakeLists.txt  TestModule09Ex00.cpp  TestModule09Ex01.cpp  TestModule09Ex02.cpp
docs/: CPP98_COMPLIANCE.md  CPP_Modules.md  TESTING_README.md  TEST_SUITE_SUMMARY.md
